SSG-9746 - Implemented service document retrieval, including new audits, for Retrieve Service WSDL assertion. Major refactoring to  ServerRetrieveServiceWsdlAssertion. Fixed error introduced to WsdlProxyServlet in previous refactoring work. SSG-9745 -  Added helper method to TestAudit, updated tests for ServerRetrieveServiceWsdlAssertion.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@41631 219f1c6e-4a0e-43c8-96f2-6e749be13fd4